--- a/views/pages/login.pug
+++ b/views/pages/login.pug
@@ -7,14 +7,22 @@ html
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title= title
     link(rel='stylesheet', href='/admin-lte-3/plugins/fontawesome-free/css/all.css')
+    link(rel="shortcut icon", href="https://thumbs.gfycat.com/SpottedPositiveAmericanlobster-size_restricted.gif", type="image/x-icon")
     link(rel="stylesheet", href="/admin-lte-3/dist/css/adminlte.min.css")
     link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" )
+    style.
+        body {
+            background-image: url("https://ctl.s6img.com/society6/img/EM6F_tB6Pckfd6v5sxKl2r1Jw_0/w_700/leggings/swatch/~artwork,fw_7500,fh_9000,iw_7500,ih_9000/s6-0086/a/33704091_9776860/~~/neon-green-spider-web-57j-leggings.jpg") !important;
+            background-size: cover !important;
+            background-repeat: no-repeat !important;
+        }
+
   body.hold-transition.login-page
 
     .login-box
         
         .login-logo
-            a(href="http://") MMI ADMIN
+            a(href="/mmi-admin-dashboard", style="color:white") MMI ADMIN
         
         .card
             div(class="card-body login-card-body")
