--- a/views/pages/dashboard.pug
+++ b/views/pages/dashboard.pug
@@ -21,7 +21,7 @@ block content
         .card-header
           h3.card-title Article Status
           .card-tools
-            select#duration(name="duration", class="btn btn-tool")
+            select#duration(name="duration", class="btn btn-tool btn-flat")
               option(value="1day") 1 day
               option(value="1week") 1 week
               option(value="1month") 1 month
