--- a/views/pages/website/index.pug
+++ b/views/pages/website/index.pug
@@ -9,6 +9,8 @@ block content
           .card-tools
             button.btn.btn-tool(onclick="location.href='/mmi-admin-dashboard/add-website'", title="New website")
               i.fas.fa-globe
+            button.btn.btn-tool(onclick="location.href='/mmi-admin-dashboard/websites/download'", title="Download Excel")
+              i.fas.fa-download
             button(type="button", class="btn btn-tool", data-card-widget="maximize")
               i.fas.fa-expand
             button(type="button", class="btn btn-tool", data-card-widget="collapse")
