--- a/views/layout.pug
+++ b/views/layout.pug
@@ -65,13 +65,17 @@ html
                 a.nav-link(href='#')
                   i.nav-icon.fas.fa-caret-right
                   p
-                    | Artems Links
+                    | Global Link Dashboard
                     i.right.fas.fa-angle-left
                 ul.nav.nav-treeview
                   li.nav-item
                     a.nav-link(href='/mmi-admin-dashboard/artem-link-dashboard', class=(path.search(/artem-link/g) != -1 ) ? 'nav-link active' : 'nav-link')
                       i.far.fa-circle.nav-icon
                       p Link Dashboard
+                  li.nav-item
+                    a.nav-link(href='/mmi-admin-dashboard/client-link-dashboard', class=(path.search(/client-link/g) != -1 ) ? 'nav-link active' : 'nav-link')
+                      i.far.fa-circle.nav-icon
+                      p Article Dashboard
                   //- li.nav-item.has-treeview
                   //-   a.nav-link(href='/mmi-admin-dashboard/artem-article-dashboard', class=(path.search(/artem-article/g) != -1 ) ? 'nav-link active' : 'nav-link')
                   //-     i.far.fa-circle.nav-icon
