--- a/views/pages/artems/client-link-dashboard.pug
+++ b/views/pages/artems/client-link-dashboard.pug
@@ -7,8 +7,8 @@ block content
         .card-header
           h3.card-title List of Articles
           .card-tools
-            button.btn.btn-tool(onclick="location.href='/mmi-admin-dashboard/articles/add'", title="New article")
-              i.fas.fa-book
+            //- button.btn.btn-tool(onclick="location.href='/mmi-admin-dashboard/articles/add'", title="New article")
+            //-   i.fas.fa-book
             button(type="button", class="btn btn-tool", data-card-widget="maximize")
               i.fas.fa-expand
             button(type="button", class="btn btn-tool", data-card-widget="collapse")
