added and updated

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -53,6 +53,10 @@ html
                   i.nav-icon.fas.fa-globe
                   p Websites
               li(class="nav-item has-treeview")
+                a(href="/mmi-admin-dashboard/scraper", class=(path.search(/scraper/g) != -1 || path === '/scraper' ) ? 'nav-link active' : 'nav-link')
+                  i.nav-icon.fas.fa-paint-brush
+                  p Scraper
+              li(class="nav-item has-treeview")
                 a(href="/mmi-admin-dashboard/articles", class=(path.search(/articles/g) != -1) ? 'nav-link active' : 'nav-link')
                   i.nav-icon.fas.fa-newspaper
                   p Articles
