--- a/views/pages/website/scraper.pug
+++ b/views/pages/website/scraper.pug
@@ -28,6 +28,7 @@ block content
                 th Loca Rank
                 th Verified
                 th Date Created
+                th Status
             thead
               tr
                 th Website Name
@@ -39,6 +40,7 @@ block content
                 th Local Rank
                 th Verified
                 th Date Created
+                th Status
 
 
 block js
